--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <hr>
     <div class="panel panel-default"
          *ngIf="showPanel"
-         [@panelState]="showParagraph3">
+         [@panelState]="showParagraph">
       <div class="panel-heading">Let's see what query does</div>
       <div class="panel-body">
         <p>query() gives you a lot of flexibility!</p>
